--- a/app/src/main/res/xml/widget2_info.xml
+++ b/app/src/main/res/xml/widget2_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialKeyguardLayout="@layout/widget2"
-    android:initialLayout="@layout/widget2"
+    android:initialKeyguardLayout="@layout/widget_2"
+    android:initialLayout="@layout/widget_2"
     android:minWidth="110dp"
     android:minHeight="110dp"
     android:previewImage="@drawable/type1"
