--- a/app/src/main/res/layout/item_weather2.xml
+++ b/app/src/main/res/layout/item_weather2.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="data"
             type="com.weather.data.Data" />
+
         <variable
             name="onClick"
-            type="android.view.View.OnClickListener"/>
+            type="android.view.View.OnClickListener" />
 
         <variable
             name="isGone"
@@ -20,10 +21,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="0.3dp"
         android:layout_marginTop="3dp"
-        android:onClick="@{onClick}">
+        android:onClick="@{onClick}"
+        app:cardCornerRadius="0dp"
+        app:cardElevation="0.3dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,8 +54,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="@dimen/margin_small"
                         android:gravity="right"
+                        android:paddingLeft="@dimen/margin_small"
                         android:text="@{data.m}"
                         android:textColor="@color/colorItemText"
                         android:textSize="@dimen/title_text_size"
@@ -65,9 +66,9 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:padding="@dimen/margin_small"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:padding="@dimen/margin_small">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -137,7 +138,5 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
-
 
 </layout>
