--- a/app/src/main/res/layout/weather_fragment.xml
+++ b/app/src/main/res/layout/weather_fragment.xml
@@ -43,13 +43,6 @@
                     tools:text="杭州" />
 
                 <TextView
-                    android:id="@+id/now_update"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone"
-                    tools:text="09:00" />
-
-                <TextView
                     android:id="@+id/now_wea"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -58,7 +51,7 @@
 
                 <TextView
                     android:id="@+id/now_tem"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/margin_small"
                     tools:text="15℃" />
