--- a/app/src/main/res/layout/weather_info.xml
+++ b/app/src/main/res/layout/weather_info.xml
@@ -15,24 +15,72 @@
             android:id="@+id/weaDay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/padding_small"
+            android:padding="@dimen/padding_small"
             android:textColor="@color/colorItemText"
             android:textSize="@dimen/setting_title_size"
-            tools:text="@string/app_name" />
+            tools:text="18日（今天）" />
 
 
-
-        <lecho.lib.hellocharts.view.LineChartView
-            android:id="@+id/chart"
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/lineChart"
+            android:layout_marginLeft="@dimen/padding_small"
+            android:layout_marginRight="@dimen/padding_small"
+            android:layout_marginBottom="@dimen/padding_small"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:padding="@dimen/padding_small" />
+            android:layout_height="250dp">
+
+        </com.github.mikephil.charting.charts.LineChart>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/lineHeight"
             android:layout_marginBottom="@dimen/padding_small"
             android:background="@color/line" />
+
+        <LinearLayout
+                android:id="@+id/alarm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/padding_small"
+                android:paddingRight="@dimen/padding_small">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/alarm_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/app_name"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="@dimen/setting_title_size"
+                    tools:text="大风预警：" />
+
+                <TextView
+                    android:id="@+id/alarm_lv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/app_name"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="@dimen/setting_title_size"
+                    tools:text="黄色" />
+
+            </LinearLayout>
+
+            <TextView
+                    android:id="@+id/alarm_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="@dimen/padding_small"
+                    android:paddingBottom="@dimen/padding_small"
+                    android:text="@string/app_name"
+                    android:textSize="@dimen/item_text_size"
+                    tools:text="空气质量asfdagsas：" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/air"
@@ -42,14 +90,29 @@
             android:paddingLeft="@dimen/padding_small"
             android:paddingRight="@dimen/padding_small">
 
-            <TextView
-                android:id="@+id/air_lv"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/setting_title_size"
-                tools:text="空气质量：" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="空气质量："
+                    android:textColor="@color/colorAccent"
+                    android:textSize="@dimen/setting_title_size"
+                    tools:text="空气质量：" />
+
+                <TextView
+                    android:id="@+id/air_lv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/app_name"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="@dimen/setting_title_size"
+                    tools:text="45 优" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/air_tips"
@@ -60,6 +123,8 @@
                 android:text="@string/app_name"
                 android:textSize="@dimen/item_text_size"
                 tools:text="空气质量asfdagsas：" />
+
+
 
         </LinearLayout>
 
@@ -72,14 +137,30 @@
             android:paddingRight="@dimen/padding_small"
             android:paddingBottom="@dimen/padding_small">
 
-            <TextView
-                android:id="@+id/chuanyi_title"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/setting_title_size"
-                tools:text="穿衣指数：" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="穿衣指数："
+                    android:textColor="@color/colorAccent"
+                    android:textSize="@dimen/setting_title_size"
+                    tools:text="穿衣指数：" />
+
+                <TextView
+                    android:id="@+id/chuanyi_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/app_name"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="@dimen/setting_title_size"
+                    tools:text="热" />
+
+            </LinearLayout>
+
 
             <TextView
                 android:id="@+id/chuanyi_tip"
