--- a/app/src/main/res/anim/dialog_slide_up.xml
+++ b/app/src/main/res/anim/dialog_slide_up.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
-        android:duration="@android:integer/config_mediumAnimTime"
-        android:interpolator="@android:anim/accelerate_interpolator"
+        android:duration="@integer/slide"
+        android:interpolator="@android:anim/overshoot_interpolator"
         android:fromYDelta="100%p"
         android:toYDelta="0"/>
+    <alpha android:fromAlpha="0.5" android:toAlpha="1" android:duration="@integer/slide"/>
+
 </set>
