--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.weather.ui.main.WeatherFragment"
+        android:name="com.weather.WeatherFragment"
         tools:layout="@layout/weather_fragment">
 
     </fragment>
