--- a/app/src/main/res/layout/weather_info.xml
+++ b/app/src/main/res/layout/weather_info.xml
@@ -1,178 +1,203 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:cardCornerRadius="@dimen/lineHeight">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <data>
+        <variable
+                name="data"
+                type="com.weather.data.Data"/>
+    </data>
 
-        <TextView
-            android:id="@+id/weaDay"
+    <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/padding_small"
-            android:textColor="@color/colorItemText"
-            android:textSize="@dimen/setting_title_size"
-            tools:text="18日（今天）" />
-
-
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/lineChart"
-            android:layout_marginLeft="@dimen/padding_small"
-            android:layout_marginRight="@dimen/padding_small"
-            android:layout_marginBottom="@dimen/padding_small"
-            android:layout_width="match_parent"
-            android:layout_height="250dp">
-
-        </com.github.mikephil.charting.charts.LineChart>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/lineHeight"
-            android:layout_marginBottom="@dimen/padding_small"
-            android:background="@color/line" />
+            android:layout_height="match_parent"
+            app:cardCornerRadius="@dimen/lineHeight">
 
         <LinearLayout
-                android:id="@+id/alarm"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingLeft="@dimen/padding_small"
-                android:paddingRight="@dimen/padding_small">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/alarm_type"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/app_name"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/setting_title_size"
-                    tools:text="大风预警：" />
+                    android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/alarm_lv"
+                        android:id="@+id/weaDay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/padding_small"
+                        android:textSize="@dimen/setting_title_size"
+                        android:textColor="@color/colorItemText"
+                        android:text="@{data.day}"
+                        tools:text="18日（今天）"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/padding_small"
+                        android:textSize="@dimen/setting_title_size"
+                        android:textColor="@color/colorItemText"
+                        android:text="@{data.tem}"
+                        tools:text="18日（今天）"/>
+            </LinearLayout>
+
+
+            <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/lineChart"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:layout_marginLeft="@dimen/padding_small"
+                    android:layout_marginRight="@dimen/padding_small"
+                    android:layout_marginBottom="@dimen/padding_small">
+
+            </com.github.mikephil.charting.charts.LineChart>
+
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/lineHeight"
+                    android:layout_marginBottom="@dimen/padding_small"
+                    android:background="@color/line"/>
+
+            <LinearLayout
+                    android:id="@+id/alarm"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/app_name"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/setting_title_size"
-                    tools:text="黄色" />
+                    android:paddingLeft="@dimen/padding_small"
+                    android:paddingRight="@dimen/padding_small"
+                    android:orientation="vertical">
+
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                    <TextView
+                            android:id="@+id/alarm_type"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/setting_title_size"
+                            android:textColor="@color/colorAccent"
+                            android:text='@{data.alarm.alarm_type+@string/alarm}'
+                            tools:text="大风预警："/>
+
+                    <TextView
+                            android:id="@+id/alarm_lv"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/setting_title_size"
+                            app:AutoColor='@{(data.alarm != null) ? data.alarm.alarm_level : @string/space}'
+                            android:textColor="@color/colorAccent"
+                            android:text="@{data.alarm.alarm_level}"
+                            tools:text="黄色"/>
+
+                </LinearLayout>
+
+                <TextView
+                        android:id="@+id/alarm_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="@dimen/padding_small"
+                        android:paddingBottom="@dimen/padding_small"
+                        android:textSize="@dimen/item_text_size"
+                        android:text="@{@string/tab+data.alarm.alarm_content}"
+                        tools:text="空气质量asfdagsas："/>
 
             </LinearLayout>
 
-            <TextView
-                    android:id="@+id/alarm_content"
+            <LinearLayout
+                    android:id="@+id/air"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/padding_small"
+                    android:paddingLeft="@dimen/padding_small"
+                    android:paddingRight="@dimen/padding_small"
+                    android:orientation="vertical">
+
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                    <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/setting_title_size"
+                            android:textColor="@color/colorAccent"
+                            android:text="空气质量："
+                            tools:text="空气质量："/>
+
+                    <TextView
+                            android:id="@+id/air_lv"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:AutoColor="@{data.air_tips != null ? data.air_level : @string/space}"
+                            android:textSize="@dimen/setting_title_size"
+                            android:text="@{data.air+@string/space+data.air_level}"
+                            tools:text="45 优"/>
+
+                </LinearLayout>
+
+                <TextView
+                        android:id="@+id/air_tips"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="@dimen/padding_small"
+                        android:paddingBottom="@dimen/padding_small"
+                        android:textSize="@dimen/item_text_size"
+                        android:text="@{@string/tab+data.air_tips}"
+                        tools:text="空气质量asfdagsas："/>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/chuanyi"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/padding_small"
+                    android:paddingRight="@dimen/padding_small"
                     android:paddingBottom="@dimen/padding_small"
-                    android:text="@string/app_name"
-                    android:textSize="@dimen/item_text_size"
-                    tools:text="空气质量asfdagsas：" />
+                    android:orientation="vertical">
 
-        </LinearLayout>
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/air"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingLeft="@dimen/padding_small"
-            android:paddingRight="@dimen/padding_small">
+                    <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/setting_title_size"
+                            android:textColor="@color/colorAccent"
+                            android:text="穿衣指数："
+                            tools:text="穿衣指数："/>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                    <TextView
+                            android:id="@+id/chuanyi_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/setting_title_size"
+                            app:AutoColor="@{data.index[3].level}"
+                            android:text="@{data.index[3].level}"
+                            tools:text="热"/>
+
+                </LinearLayout>
+
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="空气质量："
-                    android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/setting_title_size"
-                    tools:text="空气质量：" />
-
-                <TextView
-                    android:id="@+id/air_lv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/app_name"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/setting_title_size"
-                    tools:text="45 优" />
+                        android:id="@+id/chuanyi_tip"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="@dimen/padding_small"
+                        android:textSize="@dimen/item_text_size"
+                        android:text="@{@string/tab+data.index[3].desc}"
+                        tools:text="空气质量asfdagsas："/>
 
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/air_tips"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="@dimen/padding_small"
-                android:paddingBottom="@dimen/padding_small"
-                android:text="@string/app_name"
-                android:textSize="@dimen/item_text_size"
-                tools:text="空气质量asfdagsas：" />
-
-
-
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/chuanyi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingLeft="@dimen/padding_small"
-            android:paddingRight="@dimen/padding_small"
-            android:paddingBottom="@dimen/padding_small">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+    </androidx.cardview.widget.CardView>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="穿衣指数："
-                    android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/setting_title_size"
-                    tools:text="穿衣指数：" />
-
-                <TextView
-                    android:id="@+id/chuanyi_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/app_name"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/setting_title_size"
-                    tools:text="热" />
-
-            </LinearLayout>
-
-
-            <TextView
-                android:id="@+id/chuanyi_tip"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="@dimen/padding_small"
-                android:text="@string/app_name"
-                android:textSize="@dimen/item_text_size"
-                tools:text="空气质量asfdagsas：" />
-
-        </LinearLayout>
-    </LinearLayout>
-
-
-</androidx.cardview.widget.CardView>
+</layout>
