--- a/app/src/main/res/layout/guide1.xml
+++ b/app/src/main/res/layout/guide1.xml
@@ -1,16 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
-              android:gravity="center"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+    xmlns:app = "http://schemas.android.com/apk/res-auto"
+    android:layout_width = "wrap_content"
+    android:layout_height = "100dp"
+    android:gravity = "center_horizontal"
+    android:orientation = "vertical">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_small"
-            android:textColor="@drawable/title_text_click"
-            android:textSize="@dimen/title_text_size"
-            android:text="qqqq" />
+    <androidx.cardview.widget.CardView
+        android:layout_width = "wrap_content"
+        android:layout_height = "wrap_content"
+        app:cardCornerRadius = "15dp"
+        app:cardElevation = "0dp">
 
+        <LinearLayout
+            android:layout_width = "wrap_content"
+            android:layout_height = "wrap_content"
+            android:background = "@color/colorAccent"
+            android:gravity = "center_horizontal"
+            android:orientation = "vertical">
+
+            <TextView
+                android:id = "@+id/title"
+                android:layout_width = "wrap_content"
+                android:layout_height = "wrap_content"
+                android:padding= "@dimen/item_smalltext_size"
+                android:text = "@string/guide1"
+                android:textColor = "@color/colorPrimary"
+                android:textSize = "@dimen/item_text_size" />
+
+            <!--<View-->
+                <!--android:layout_width = "match_parent"-->
+                <!--android:layout_height = "1dp"-->
+                <!--android:background = "@color/line" />-->
+
+            <!--<TextView-->
+                <!--android:id = "@+id/next"-->
+                <!--android:layout_width = "wrap_content"-->
+                <!--android:layout_height = "wrap_content"-->
+                <!--android:text = "@string/nextStep"-->
+                <!--android:textColor = "@color/colorPrimary"-->
+                <!--android:textSize = "@dimen/item_text_size" />-->
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
