--- a/app/src/main/res/layout/weather_info.xml
+++ b/app/src/main/res/layout/weather_info.xml
@@ -36,11 +36,10 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/padding_small"
                         android:textSize="@dimen/setting_title_size"
                         android:textColor="@color/colorItemText"
-                        android:text="@{data.tem}"
-                        tools:text="18日（今天）"/>
+                        android:text="@{data.week}"
+                        tools:text="星期三"/>
             </LinearLayout>
 
 
